src/main/java/com/github/alonwang/lpcintellijplugin/parser/LPCParser.java
// Generated from /Users/alonwang/IdeaProjects/lpc-intellij-plugin/src/main/java/LPC.g4 by ANTLR 4.9.2
package com.github.alonwang.lpcintellijplugin.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LPCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, TypeModifier=17, 
		Assign=18, PlusPlus=19, MinusMinus=20, And=21, AndAnd=22, Caret=23, Or=24, 
		OrOr=25, Equal=26, LeftShift=27, RightShift=28, Not=29, NotEqual=30, Compare=31, 
		LessEqual=32, Great=33, GreatEqual=34, Arrow=35, BasicType=36, Break=37, 
		Catch=38, Class=39, Colon=40, ColonColon=41, Continue=42, DefinedName=43, 
		Efun=44, Ellipsis=45, Else=46, If=47, Inherit=48, Return=49, For=50, Foreach=51, 
		In=52, Switch=53, Case=54, While=55, Do=56, Default=57, New=58, ParseCommand=59, 
		Question=60, Range=61, SScanf=62, MappingOpen=63, ArrayOpen=64, FunctionOpen=65, 
		Number=66, Parameter=67, ComplexDefine=68, ComplexInclude=69, ComplexPreprocessor=70, 
		Real=71, DigitSequence=72, Identifier=73, String=74, StringPrefix=75, 
		CharacterConstant=76, TimeExpression=77, BlockComment=78, LineComment=79, 
		Whitespace=80, Newline=81;
	public static final int
		RULE_lpc_program = 0, RULE_program = 1, RULE_possible_semi_colon = 2, 
		RULE_defination = 3, RULE_function_defination = 4, RULE_modifier_change = 5, 
		RULE_type_modifier_list = 6, RULE_type_decl = 7, RULE_member_list = 8, 
		RULE_member_name_list = 9, RULE_member_name = 10, RULE_name_list = 11, 
		RULE_new_name = 12, RULE_expr0 = 13, RULE_time_expression = 14, RULE_expr_or_block = 15, 
		RULE_comma_expr = 16, RULE_parse_command = 17, RULE_sscanf = 18, RULE_lvalue_list = 19, 
		RULE_cast = 20, RULE_basic_type = 21, RULE_atomic_type = 22, RULE_expr4 = 23, 
		RULE_catch_statement = 24, RULE_expr_list = 25, RULE_expr_list3 = 26, 
		RULE_expr_list4 = 27, RULE_assoc_pair = 28, RULE_expr_list2 = 29, RULE_expr_list_node = 30, 
		RULE_string = 31, RULE_string_con2 = 32, RULE_string_con1 = 33, RULE_function_call = 34, 
		RULE_function_name_call = 35, RULE_function_arrow_call = 36, RULE_function_name = 37, 
		RULE_opt_class_init = 38, RULE_class_init = 39, RULE_efun_override = 40, 
		RULE_block_or_semi = 41, RULE_block = 42, RULE_statements = 43, RULE_local_declare_statement = 44, 
		RULE_local_name_list = 45, RULE_new_local_def = 46, RULE_new_local_name = 47, 
		RULE_statement = 48, RULE_while_statement = 49, RULE_do_statement = 50, 
		RULE_switch_statement = 51, RULE_local_declarations = 52, RULE_case_statement = 53, 
		RULE_switch_block = 54, RULE_case_label = 55, RULE_constant = 56, RULE_foreach_loop = 57, 
		RULE_foreach_vars = 58, RULE_for_loop = 59, RULE_foreach_var = 60, RULE_first_for_expr = 61, 
		RULE_single_new_local_def_with_init = 62, RULE_single_new_local_def = 63, 
		RULE_for_expr = 64, RULE_returnStatement = 65, RULE_cond = 66, RULE_optional_else_part = 67, 
		RULE_argument = 68, RULE_argument_list = 69, RULE_new_arg = 70, RULE_inheritance = 71, 
		RULE_data_type = 72, RULE_opt_basic_type = 73, RULE_optional_star = 74, 
		RULE_identifier = 75;
	private static String[] makeRuleNames() {
		return new String[] {
			"lpc_program", "program", "possible_semi_colon", "defination", "function_defination", 
			"modifier_change", "type_modifier_list", "type_decl", "member_list", 
			"member_name_list", "member_name", "name_list", "new_name", "expr0", 
			"time_expression", "expr_or_block", "comma_expr", "parse_command", "sscanf", 
			"lvalue_list", "cast", "basic_type", "atomic_type", "expr4", "catch_statement", 
			"expr_list", "expr_list3", "expr_list4", "assoc_pair", "expr_list2", 
			"expr_list_node", "string", "string_con2", "string_con1", "function_call", 
			"function_name_call", "function_arrow_call", "function_name", "opt_class_init", 
			"class_init", "efun_override", "block_or_semi", "block", "statements", 
			"local_declare_statement", "local_name_list", "new_local_def", "new_local_name", 
			"statement", "while_statement", "do_statement", "switch_statement", "local_declarations", 
			"case_statement", "switch_block", "case_label", "constant", "foreach_loop", 
			"foreach_vars", "for_loop", "foreach_var", "first_for_expr", "single_new_local_def_with_init", 
			"single_new_local_def", "for_expr", "returnStatement", "cond", "optional_else_part", 
			"argument", "argument_list", "new_arg", "inheritance", "data_type", "opt_basic_type", 
			"optional_star", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "'{'", "'}'", "','", "'<'", "'*'", "'%'", 
			"'/'", "'+'", "'-'", "'~'", "'$'", "'['", "']'", null, null, "'++'", 
			"'--'", "'&'", "'&&'", "'^'", "'|'", "'||'", "'=='", "'<<'", "'>>'", 
			"'!'", "'!='", null, "'<='", "'>'", "'>='", "'->'", null, "'break'", 
			"'catch'", "'class'", "':'", "'::'", "'continue'", "'foo'", "'efun'", 
			"'...'", "'else'", "'if'", "'inherit'", "'return'", "'for'", "'foreach'", 
			"'in'", "'switch'", "'case'", "'while'", "'do'", "'default'", "'new'", 
			"'parse_command'", "'?'", "'..'", "'sscanf'", null, null, null, null, 
			null, null, null, null, null, null, null, null, "'@'", null, "'time_expression'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "TypeModifier", "Assign", "PlusPlus", "MinusMinus", 
			"And", "AndAnd", "Caret", "Or", "OrOr", "Equal", "LeftShift", "RightShift", 
			"Not", "NotEqual", "Compare", "LessEqual", "Great", "GreatEqual", "Arrow", 
			"BasicType", "Break", "Catch", "Class", "Colon", "ColonColon", "Continue", 
			"DefinedName", "Efun", "Ellipsis", "Else", "If", "Inherit", "Return", 
			"For", "Foreach", "In", "Switch", "Case", "While", "Do", "Default", "New", 
			"ParseCommand", "Question", "Range", "SScanf", "MappingOpen", "ArrayOpen", 
			"FunctionOpen", "Number", "Parameter", "ComplexDefine", "ComplexInclude", 
			"ComplexPreprocessor", "Real", "DigitSequence", "Identifier", "String", 
			"StringPrefix", "CharacterConstant", "TimeExpression", "BlockComment", 
			"LineComment", "Whitespace", "Newline"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LPC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LPCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Lpc_programContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LPCParser.EOF, 0); }
		public Lpc_programContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lpc_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).enterLpc_program(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).exitLpc_program(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPCVisitor ) return ((LPCVisitor<? extends T>)visitor).visitLpc_program(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lpc_programContext lpc_program() throws RecognitionException {
		Lpc_programContext _localctx = new Lpc_programContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lpc_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			program(0);
			setState(153);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public DefinationContext defination() {
			return getRuleContext(DefinationContext.class,0);
		}
		public Possible_semi_colonContext possible_semi_colon() {
			return getRuleContext(Possible_semi_colonContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPCVisitor ) return ((LPCVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		return program(0);
	}

	private ProgramContext program(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ProgramContext _localctx = new ProgramContext(_ctx, _parentState);
		ProgramContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_program, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			}
			_ctx.stop = _input.LT(-1);
			setState(162);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ProgramContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_program);
					setState(156);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(157);
					defination();
					setState(158);
					possible_semi_colon();
					}
					} 
				}
				setState(164);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Possible_semi_colonContext extends ParserRuleContext {
		public Possible_semi_colonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_possible_semi_colon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).enterPossible_semi_colon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).exitPossible_semi_colon(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPCVisitor ) return ((LPCVisitor<? extends T>)visitor).visitPossible_semi_colon(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Possible_semi_colonContext possible_semi_colon() throws RecognitionException {
		Possible_semi_colonContext _localctx = new Possible_semi_colonContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_possible_semi_colon);
		try {
			setState(167);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(166);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinationContext extends ParserRuleContext {
		public Function_definationContext function_defination() {
			return getRuleContext(Function_definationContext.class,0);
		}
		public Data_typeContext data_type() {
			return getRuleContext(Data_typeContext.class,0);
		}
		public Name_listContext name_list() {
			return getRuleContext(Name_listContext.class,0);
		}
		public InheritanceContext inheritance() {
			return getRuleContext(InheritanceContext.class,0);
		}
		public Type_declContext type_decl() {
			return getRuleContext(Type_declContext.class,0);
		}
		public Modifier_changeContext modifier_change() {
			return getRuleContext(Modifier_changeContext.class,0);
		}
		public DefinationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defination; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).enterDefination(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).exitDefination(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPCVisitor ) return ((LPCVisitor<? extends T>)visitor).visitDefination(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinationContext defination() throws RecognitionException {
		DefinationContext _localctx = new DefinationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_defination);
		try {
			setState(177);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(169);
				function_defination();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(170);
				data_type();
				setState(171);
				name_list();
				setState(172);
				match(T__0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(174);
				inheritance();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(175);
				type_decl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(176);
				modifier_change();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definationContext extends ParserRuleContext {
		public Data_typeContext data_type() {
			return getRuleContext(Data_typeContext.class,0);
		}
		public Optional_starContext optional_star() {
			return getRuleContext(Optional_starContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public Block_or_semiContext block_or_semi() {
			return getRuleContext(Block_or_semiContext.class,0);
		}
		public Function_definationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_defination; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).enterFunction_defination(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPCListener ) ((LPCListener)listener).exitFunction_defination(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LPCVisitor ) return ((LPCVisitor<? extends T>)visitor).visitFunction_defination(this);
			else return visitor.visitChildren(this);
		}
	}
